--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
 GITHUB_ID="github_oauth2_id"
 GITHUB_SECRET="github_oauth2_secret"
 
+GOOGLE_CLIENT_ID="797560681619-bl0vq0k4sqlj519nk4og0sim401vep2n.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET="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"
+
 NEXTAUTH_SECRET="nextauth_secret"
 NEXTAUTH_URL="http://localhost:3000"
 
@@ -11,12 +14,6 @@ ABLY_API_KEY="ably_realtime_api_key"
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="cloudinary_cloud_name"
 NEXT_PUBLIC_CLOUDINARY_API_KEY="cloudinary_api_key"
 CLOUDINARY_API_SECRET="cloudinary_api_secret"
-
-# Used for Shark AI
-#
-# INWORLD_KEY="inworld_key"
-# INWORLD_SECRET="inworld_secret"
-# INWORLD_SCENE="workspaces/somewhere"
 
 REDIS_URL="https://<somewhere>.upstash.io"
 REDIS_TOKEN="upstash_redis_token"
