--- a/turbo.json
+++ b/turbo.json
@@ -25,6 +25,9 @@
     "DISCORD_CLIENT_ID",
     "DISCORD_CLIENT_SECRET",
 
+    "GOOGLE_CLIENT_ID",
+    "GOOGLE_CLIENT_SECRET",
+
     "EDENAI_TOKEN"
   ],
   "globalPassThroughEnv": [
