--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,42 @@
-GITHUB_ID="github_oauth2_id"
-GITHUB_SECRET="github_oauth2_secret"
+PORT_POSTGRES="5432"
+PORT_PGADMIN="5050"
+PORT_FRONTEND="3000"
+PORT_LANDING="3001"
 
-GOOGLE_CLIENT_ID="797560681619-bl0vq0k4sqlj519nk4og0sim401vep2n.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRET="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"
+# ---- postgres ----
 
-NEXTAUTH_SECRET="nextauth_secret"
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="***"
+DATABASE_URL="postgresql://postgres:***/postgres?schema=public"
+PGDATA="/var/lib/postgresql/data/pgdata"
+
+# ---- pgadmin ----
+
+PGADMIN_DEFAULT_EMAIL="admin@admin.com"
+PGADMIN_DEFAULT_PASSWORD="admin"
+
+# ---- nginx ----
+
+NGINX_SERVER_NAME="***"
+NGINX_SSL_CERTIFICATE_PATH="/etc/ssl/***/***.crt"
+NGINX_SSL_CERTIFICATE_KEY_PATH="/etc/ssl/***/***.key"
+
+# ---- app ----
+
+GITHUB_ID="***"
+GITHUB_SECRET="***"
+
+GOOGLE_CLIENT_ID="***"
+GOOGLE_CLIENT_SECRET="***"
+
+NEXTAUTH_SECRET="***"
 NEXTAUTH_URL="http://localhost:3000"
 
-DATABASE_URL="postresql://somewhere"
+ABLY_API_KEY="***"
 
-ABLY_API_KEY="ably_realtime_api_key"
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="***"
+NEXT_PUBLIC_CLOUDINARY_API_KEY="***"
+CLOUDINARY_API_SECRET="***"
 
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="cloudinary_cloud_name"
-NEXT_PUBLIC_CLOUDINARY_API_KEY="cloudinary_api_key"
-CLOUDINARY_API_SECRET="cloudinary_api_secret"
-
-REDIS_URL="https://<somewhere>.upstash.io"
-REDIS_TOKEN="upstash_redis_token"
+REDIS_URL="https://***.upstash.io"
+REDIS_TOKEN="***"
