--- a/compose.yaml
+++ b/compose.yaml
@@ -38,8 +38,8 @@ services:
       - ./nginx.template.conf:/etc/nginx/nginx.template.conf
       - /etc/ssl/mee.social:/etc/ssl/mee.social
     depends_on:
-      - backend
       - client
+      - landing
     container_name: mee-proxy
     command: /bin/bash -c "envsubst < etc/nginx/nginx.template.conf > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
     <<: *env
@@ -74,6 +74,8 @@ services:
     restart: always
     ports:
       - ${PORT_FRONTEND}
+    depends_on:
+      - pgdb
     container_name: mee-client
     <<: *env
 
