Fix docker compose

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,10 @@ PORT_PGADMIN="5050"
 PORT_FRONTEND="3000"
 PORT_LANDING="3001"
 
+# url
+
+CLIENT_WEB_BASE_PREFIX="/c"
+
 # ---- postgres ----
 
 POSTGRES_USER="postgres"
