--- a/nginx.template.conf
+++ b/nginx.template.conf
@@ -21,12 +21,13 @@ http {
         ssl_certificate         ${NGINX_SSL_CERTIFICATE_PATH};
         ssl_certificate_key     ${NGINX_SSL_CERTIFICATE_KEY_PATH};
 
-        location ${CLIENT_WEB_BASE_PREFIX}/ {
-            proxy_pass http://client:${PORT_FRONTEND}/;
+        location /landing/ {
+            proxy_pass http://landing:${PORT_LANDING}/;
         }
 
         location / {
-            proxy_pass http://landing:${PORT_LANDING}/;
+            proxy_pass http://client:${PORT_FRONTEND}/;
+            # proxy_pass http://landing:${PORT_LANDING}/;
         }
     }
 }
